# JDQMR16

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
examples/: CMakeLists.txt  ex_eigs  ex_eigs.cu
examples/include/: mmio.cu  mmio.h
examples/includesExamples/: readmtx.cu  readmtx.h
include/: jdqmr16.h
src/: CMakeLists.txt
src/eig/: eigH.cu  eigH.h  expandBasis.cu  expandBasis.h  helper.cu  initBasis.cu  initBasis.h  innerSolver.cu  innerSolver.h  jdqmr16.cu  locking.cu  locking.cu.backup  locking.h  residual.cu  residual.h  restart.cu  restart.h  sqmr.cu  sqmr.h
src/eig/backup/: innerSolver.cu  innerSolver.h  sqmr.cu  sqmr.h
src/include/: helper.h
src/matrix/: double2halfMat.cu  double2halfMat.cu.backup  double2halfMat.h
